--- a/hospitality-healthcare.html
+++ b/hospitality-healthcare.html
@@ -61,8 +61,13 @@
                     <img src="assets/industries_internal/hospitality_healthcare/hospitality/1_nehru_bhavan.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Nehru Bhavan</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Conceptual idea</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Government of Maharashtra</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2019, Completed</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 20,000 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Aurangabad</p>
+                    <p class="project_desc"><span class="project_detail collab_partner">Collab-partner:</span> Ar. Asif Sayed</p>
                 </div>
             </div>
         </div>
@@ -72,9 +77,15 @@
                 <div class="project_card_front">
                     <img src="assets/industries_internal/hospitality_healthcare/hospitality/2_dream_11.jpeg" class="project_image" alt="">
                 </div>
+
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Dream Sports Complex</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Conceptual idea</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Dream 11</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2019, Completed</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 1,50,000 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> BKC, Bandra</p>
+                    <p class="project_desc"><span class="project_detail collab_partner">Collab-partner:</span> Ar. Asif Sayed</p>
                 </div>
             </div>
         </div>
@@ -85,8 +96,12 @@
                     <img src="assets/industries_internal/hospitality_healthcare/hospitality/3_global_villas.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Global villas</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Architectural design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Mr. Rajiv Gupta</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2021, Completed</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 11 acres</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Kamshet, Lonavala</p>
                 </div>
             </div>
         </div>
@@ -97,8 +112,12 @@
                     <img src="assets/industries_internal/hospitality_healthcare/hospitality/4_maad.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">MAAD club</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Conceptual idea</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> MAAD</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2021, Completed</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 6,000 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Vasai (E)</p>
                 </div>
             </div>
         </div>
@@ -108,9 +127,14 @@
                 <div class="project_card_front">
                     <img src="assets/industries_internal/hospitality_healthcare/hospitality/5_blue_waves.jpeg" class="project_image" alt="">
                 </div>
+
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Blue Waves resort</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Architectural design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Mr Samir Sawant</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2023-2024, Completed</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 1742 sq.mt.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Varsoli, Alibaug</p>
                 </div>
             </div>
         </div>
@@ -125,8 +149,13 @@
                     <img src="assets/industries_internal/hospitality_healthcare/healthcare/1_rakiya_hospital.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Rakiya Hospital</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> MEP consultants</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Dr. Farooq Chinde</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 15,000 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Nalasopara (W)</p>
+                    <p class="project_desc collab_partner"><span class="project_detail">Collab-partner:</span> Ar. Harish Gehlot, Designs 3.14</p>
                 </div>
             </div>
         </div>
@@ -137,32 +166,28 @@
                     <img src="assets/industries_internal/hospitality_healthcare/healthcare/2_yadav_hospital.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Yadav hospital</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Architectural design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Dr. Suman Yadav</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 250 sq.m</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Nalasopara (W)</p>
                 </div>
             </div>
         </div>
-        <!-- project card -->
-        <!-- <div class="project_card">
-            <div class="project_card_inside">
-                <div class="project_card_front">
-                    <img src="assets/industries_internal/hospitality_healthcare/healthcare/3_kudus.jpeg" class="project_image" alt="">
-                </div>
-                <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
-                </div>
-            </div>
-        </div> -->
-        <!-- project card -->
+        
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
                     <img src="assets/industries_internal/hospitality_healthcare/healthcare/4_madhavbaug.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Madhavbaug clinic</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Architectural design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Madhavbaug Clinics</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Completed</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 2000 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Charkop, Kandivali</p>
                 </div>
             </div>
         </div>
