--- a/hospitality-healthcare.html
+++ b/hospitality-healthcare.html
@@ -155,7 +155,7 @@
                     <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
                     <p class="project_desc"><span class="project_detail">Area:</span> 15,000 sq.ft.</p>
                     <p class="project_desc"><span class="project_detail">Location:</span> Nalasopara (W)</p>
-                    <p class="project_desc collab_partner"><span class="project_detail">Collab-partner:</span> Ar. Harish Gehlot, Designs 3.14</p>
+                    <p class="project_desc"><span class="project_detail collab_partner">Collab-partner:</span> Ar. Harish Gehlot, Designs 3.14</p>
                 </div>
             </div>
         </div>
@@ -249,8 +249,8 @@
                     </div>
                 </div>
             </div>
+            <!-- copyright social -->
             <div class="footer_bottom">
-                <!-- copyright social -->
                 <div class="copyright_social">
                     <p class="company_details">&copy; EN Architecture & Designs
                         <script>document.write(new Date().getFullYear())</script>
