collab class fix

--- a/hospitality-healthcare.html
+++ b/hospitality-healthcare.html
@@ -67,7 +67,7 @@
                     <p class="project_desc"><span class="project_detail">Year:</span> 2019, Completed</p>
                     <p class="project_desc"><span class="project_detail">Area:</span> 20,000 sq.ft.</p>
                     <p class="project_desc"><span class="project_detail">Location:</span> Aurangabad</p>
-                    <p class="project_desc"><span class="project_detail collab_partner">Collab-partner:</span> Ar. Asif Sayed</p>
+                    <p class="project_desc"><span class="collab_partner">Collab-partner:</span> Ar. Asif Sayed</p>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
                     <p class="project_desc"><span class="project_detail">Year:</span> 2019, Completed</p>
                     <p class="project_desc"><span class="project_detail">Area:</span> 1,50,000 sq.ft.</p>
                     <p class="project_desc"><span class="project_detail">Location:</span> BKC, Bandra</p>
-                    <p class="project_desc"><span class="project_detail collab_partner">Collab-partner:</span> Ar. Asif Sayed</p>
+                    <p class="project_desc"><span class="collab_partner">Collab-partner:</span> Ar. Asif Sayed</p>
                 </div>
             </div>
         </div>
@@ -155,7 +155,7 @@
                     <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
                     <p class="project_desc"><span class="project_detail">Area:</span> 15,000 sq.ft.</p>
                     <p class="project_desc"><span class="project_detail">Location:</span> Nalasopara (W)</p>
-                    <p class="project_desc"><span class="project_detail collab_partner">Collab-partner:</span> Ar. Harish Gehlot, Designs 3.14</p>
+                    <p class="project_desc"><span class="collab_partner">Collab-partner:</span> Ar. Harish Gehlot, Designs 3.14</p>
                 </div>
             </div>
         </div>
