--- a/interiors.html
+++ b/interiors.html
@@ -185,7 +185,7 @@
                     <p class="project_desc"><span class="project_detail">Year:</span> Completed</p>
                     <p class="project_desc"><span class="project_detail">Area:</span> 1300 sq.ft.</p>
                     <!-- <p class="project_desc"><span class="project_detail">Location:</span> Thane</p> -->
-                    <p class="project_desc collab_partner"><span class="project_detail">Collab-partner:</span> Design 3.14</p>
+                    <p class="project_desc"><span class="project_detail collab_partner">Collab-partner:</span> Design 3.14</p>
                 </div>
             </div>
         </div>
