industry nav arrow

--- a/architecture.html
+++ b/architecture.html
@@ -411,7 +411,7 @@
     </div>
     <!-- industry navigation -->
     <div class="industry_navigation">
-        <a href="landscape.html" class="industry_nav_btn">Check out: <span class="industry_nav_name">landscape</span></a>
+        <a href="landscape.html" class="industry_nav_btn">Check out:&nbsp;<span class="industry_nav_name">landscape</span><span class="material-symbols-outlined industry_nav_arr">arrow_forward</span></a>
     </div>
     <!-- footer -->
     <footer>
