--- a/hospitality-healthcare.html
+++ b/hospitality-healthcare.html
@@ -195,8 +195,8 @@
     </div>
     <!-- industry navigation -->
     <div class="industry_navigation">
-        <a href="interiors.html" class="industry_nav_btn">In case you missed: <span class="industry_nav_name">interiors</span></a>
-        <a href="index.html" class="industry_nav_btn"><span class="industry_nav_name">go home</span></a>
+        <a href="interiors.html" class="industry_nav_btn"><span class="material-symbols-outlined industry_nav_arr_back">arrow_back</span>In case you missed:&nbsp;<span class="industry_nav_name">interiors</span></a>
+        <a href="index.html" class="industry_nav_btn"><span class="industry_nav_name">go home</span><span class="material-symbols-outlined industry_nav_arr">arrow_forward</span></a>
     </div>
     <!-- footer -->
     <footer>
