--- a/interiors.html
+++ b/interiors.html
@@ -309,8 +309,8 @@
     </div>
     <!-- industry navigation -->
     <div class="industry_navigation">
-        <a href="landscape.html" class="industry_nav_btn">In case you missed: <span class="industry_nav_name">landscape</span></a>
-        <a href="hospitality-healthcare.html" class="industry_nav_btn">Check out: <span class="industry_nav_name">hospitality & healthcare</span></a>
+        <a href="landscape.html" class="industry_nav_btn"><span class="material-symbols-outlined industry_nav_arr_back">arrow_back</span>In case you missed:&nbsp;<span class="industry_nav_name">landscape</span></a>
+        <a href="hospitality-healthcare.html" class="industry_nav_btn">Check out:&nbsp;<span class="industry_nav_name">hospitality & healthcare</span><span class="material-symbols-outlined industry_nav_arr">arrow_forward</span></a>
     </div>
     <!-- footer -->
     <footer>
