--- a/landscape.html
+++ b/landscape.html
@@ -258,8 +258,8 @@
     </div>
     <!-- industry navigation -->
     <div class="industry_navigation">
-        <a href="architecture.html" class="industry_nav_btn">In case you missed: <span class="industry_nav_name">architecture</span></a>
-        <a href="interiors.html" class="industry_nav_btn">Check out: <span class="industry_nav_name">interiors</span></a>
+        <a href="architecture.html" class="industry_nav_btn"><span class="material-symbols-outlined industry_nav_arr_back">arrow_back</span>In case you missed:&nbsp;<span class="industry_nav_name">architecture</span></a>
+        <a href="interiors.html" class="industry_nav_btn">Check out:&nbsp;<span class="industry_nav_name">interiors</span><span class="material-symbols-outlined industry_nav_arr">arrow_forward</span></a>
     </div>
     <!-- footer -->
     <footer>
