footer nav links

--- a/interiors.html
+++ b/interiors.html
@@ -329,19 +329,19 @@
                 <div class="footer_links_head_wrap">
                     <p class="footer_links_head">main</p>
                     <div class="footer_links">
-                        <a class="footer_link">home</a>
-                        <a class="footer_link">about</a>
-                        <a class="footer_link">key projects</a>
+                        <a href="index.html" class="footer_link">home</a>
+                        <a href="about.html" class="footer_link">about</a>
+                        <a href="index.html#keyProjects" class="footer_link">key projects</a>
                     </div>
                 </div>
                 <!-- footer links -->
                 <div class="footer_links_head_wrap">
                     <p class="footer_links_head">industries</p>
                     <div class="footer_links">
-                        <a class="footer_link">architecture</a>
-                        <a class="footer_link">landscape</a>
-                        <a class="footer_link">interiors</a>
-                        <a class="footer_link">hospitality & healthcare</a>
+                        <a href="architecture.html" class="footer_link">architecture</a>
+                        <a href="landscape.html" class="footer_link">landscape</a>
+                        <a href="interiors.html" class="footer_link">interiors</a>
+                        <a href="hospitality-healthcare.html" class="footer_link">hospitality & healthcare</a>
                     </div>
                 </div>
                 <!-- footer contact -->
