--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
         <a href="architecture.html" class="sticky_industry">Architecture</a>
         <a href="landscape.html" class="sticky_industry">Landscape</a>
         <a href="interiors.html" class="sticky_industry">Interiors</a>
-        <a href= "hospitality-healthcare.html" class="sticky_industry">Hospitality / Healthcare Planning</a>
+        <a href= "hospitality-healthcare.html" class="sticky_industry">Hospitality & Healthcare Planning</a>
     </div>
 
     <!-- ********************************************************* -->
