interiors high end projects

--- a/interiors.html
+++ b/interiors.html
@@ -71,7 +71,6 @@
                 </div>
             </div>
         </div>
-        
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
@@ -82,24 +81,23 @@
                     <p class="project_name">Interiors for 5BHK bungalow</p>
                     <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
                     <p class="project_desc"><span class="project_detail">Client:</span> Private</p>
-                    <p class="project_desc"><span class="project_detail">Year:</span> 2022-2023</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2022-2023, Completed</p>
                     <p class="project_desc"><span class="project_detail">Area:</span> 9000 sq.ft</p>
                     <p class="project_desc"><span class="project_detail">Location:</span> Borli, Alibaug</p>
                 </div>
             </div>
         </div>
-        
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/interiors/high_enad_residential/3_bunglow_at_wada.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/high_enad_residential/3_bunglow_at_goa.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Interiors for 3BHK bungalow</p>
                     <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
                     <p class="project_desc"><span class="project_detail">Client:</span> Adv. Chopde</p>
-                    <p class="project_desc"><span class="project_detail">Year:</span> 2021-2022</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2021-2022, Completed</p>
                     <p class="project_desc"><span class="project_detail">Area:</span> 3000 sq.ft.</p>
                     <p class="project_desc"><span class="project_detail">Location:</span> Goa</p>
                 </div>
@@ -109,15 +107,31 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/interiors/high_enad_residential/4_bunglow_at_goa.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/high_enad_residential/4_bunglow_at_wada.jpg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Agro Tourism at Wada</p>
-                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_name">Interiors for a 4BHK bungalow</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
                     <p class="project_desc"><span class="project_detail">Client:</span> Mr. Boir</p>
-                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
-                    <p class="project_desc"><span class="project_detail">Area:</span> 3.5 acres</p>
-                    <p class="project_desc"><span class="project_detail">Location:</span> Wada</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2023-Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 2000 sq.ft</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Ambivali</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/interiors/high_enad_residential/5_bunglow_at_ambivali.jpg" class="project_image" alt="">
+                </div>
+                <div class="project_card_back">
+                    <p class="project_name">Interiors for a 4BHK bungalow</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Private</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2023-Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 3940 sq.ft</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Ambivali</p>
                 </div>
             </div>
         </div>
