--- a/about.html
+++ b/about.html
@@ -54,43 +54,67 @@
                 <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem illum repellat dolor. Doloremque at neque minima voluptatibus mollitia consequatur ex praesentium, ab velit in aspernatur recusandae inventore.</p>
             </div>
         </div>
+        <!-- core members -->
         <div class="team_head_cards">
             <p class="about_main_head core_members_head">Core members</p>
             <div class="team_cards">
                 <!-- team card -->
                 <div class="team_card">
-                    <img src="https://dummyimage.com/226x226/4caf4f/fff" class="member_photo" alt="">
-                    <p class="member_name">Heli Patel </p>
-                    <p class="member_role">(Interior Designer)</p>
+                    <img src="/assets/about/saurabh_barde.jpg" class="member_photo" alt="">
+                    <p class="member_name">Ar. Saurabh Barde</p>
+                    <p class="member_role">(Founder & Principle Architect)</p>
                     <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p>
                     <!-- <p class="member_exp">5 years experience</p> -->
                 </div>
                 <!-- team card -->
                 <div class="team_card">
-                    <img src="https://dummyimage.com/226x226/4caf4f/fff" class="member_photo" alt="">
-                    <p class="member_name">Heli Patel </p>
-                    <p class="member_role">(Interior Designer)</p>
+                    <img src="/assets/about/raj_shah.jpeg" class="member_photo" alt="">
+                    <p class="member_name">Ar. Raj Shah </p>
+                    <p class="member_role">(Architect)</p>
                     <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p>
                     <!-- <p class="member_exp">5 years experience</p> -->
                 </div>
                 <!-- team card -->
                 <div class="team_card">
-                    <img src="https://dummyimage.com/226x226/4caf4f/fff" class="member_photo" alt="">
-                    <p class="member_name">Heli Patel </p>
-                    <p class="member_role">(Interior Designer)</p>
+                    <img src="/assets/about/atharva_nene.jpeg" class="member_photo" alt="">
+                    <p class="member_name">Ar. Atharva Nene</p>
+                    <p class="member_role">(Architect)</p>
                     <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p>
                     <!-- <p class="member_exp">5 years experience</p> -->
                 </div>
                 <!-- team card -->
                 <div class="team_card">
-                    <img src="https://dummyimage.com/226x226/4caf4f/fff" class="member_photo" alt="">
-                    <p class="member_name">Heli Patel </p>
+                    <img src="/assets/about/heli_patel.jpg" class="member_photo" alt="">
+                    <p class="member_name">Int Des. Heli Patel </p>
                     <p class="member_role">(Interior Designer)</p>
                     <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p>
                     <!-- <p class="member_exp">5 years experience</p> -->
                 </div>
             </div>
         </div>
+        <!-- interns -->
+        <div class="team_head_cards">
+            <p class="about_main_head core_members_head">Interns</p>
+            <div class="team_cards intern_cards">
+                <!-- team card -->
+                <div class="team_card">
+                    <img src="/assets/about/interns/shweta_anantharaya.jpeg" class="member_photo" alt="">
+                    <p class="member_name">Shweta Anantharaya</p>
+                    <p class="member_role">(Intern)</p>
+                    <!-- <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p> -->
+                    <!-- <p class="member_exp">5 years experience</p> -->
+                </div>
+                <!-- team card -->
+                <div class="team_card">
+                    <img src="/assets/about/interns/suvarn_wadekar.jpeg" class="member_photo" alt="">
+                    <p class="member_name">Suvarn Wadekar</p>
+                    <p class="member_role">(Intern)</p>
+                    <!-- <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p> -->
+                    <!-- <p class="member_exp">5 years experience</p> -->
+                </div>
+            </div>
+        </div>
+        <!-- associates -->
         <div class="team_associates">
             <p class="about_main_head associates_head">Associates</p>
             <div class="associates_wrap">
