--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <section class="hero_wrap">
         <div class="hero">
             <div class="container hero_container">
-                <p class="pre_head">services</p>
+                <p class="pre_head">principle</p>
                 <p class="hero_head">
-                    We are a versatile architectural firm which provides all sort of architectural solutions of various scales.
+                    We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and unbuilt.
                 </p>
                 <a class="hero_cta">key projects</a>
             </div>
