--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
             <div class="team_cards">
                 <!-- team card -->
                 <div class="team_card">
-                    <img src="/assets/about/saurabh_barde.jpg" class="member_photo" alt="">
+                    <img src="assets/about/saurabh_barde.jpg" class="member_photo" alt="">
                     <p class="member_name">Ar. Saurabh Barde</p>
                     <p class="member_role">(Founder & Principle Architect)</p>
                     <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p>
@@ -68,7 +68,7 @@
                 </div>
                 <!-- team card -->
                 <div class="team_card">
-                    <img src="/assets/about/raj_shah.jpeg" class="member_photo" alt="">
+                    <img src="assets/about/raj_shah.jpeg" class="member_photo" alt="">
                     <p class="member_name">Ar. Raj Shah </p>
                     <p class="member_role">(Architect)</p>
                     <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p>
@@ -76,7 +76,7 @@
                 </div>
                 <!-- team card -->
                 <div class="team_card">
-                    <img src="/assets/about/atharva_nene.jpeg" class="member_photo" alt="">
+                    <img src="assets/about/atharva_nene.jpeg" class="member_photo" alt="">
                     <p class="member_name">Ar. Atharva Nene</p>
                     <p class="member_role">(Architect)</p>
                     <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p>
@@ -84,7 +84,7 @@
                 </div>
                 <!-- team card -->
                 <div class="team_card">
-                    <img src="/assets/about/heli_patel.jpg" class="member_photo" alt="">
+                    <img src="assets/about/heli_patel.jpg" class="member_photo" alt="">
                     <p class="member_name">Int Des. Heli Patel </p>
                     <p class="member_role">(Interior Designer)</p>
                     <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p>
@@ -98,7 +98,7 @@
             <div class="team_cards intern_cards">
                 <!-- team card -->
                 <div class="team_card">
-                    <img src="/assets/about/interns/shweta_anantharaya.jpeg" class="member_photo" alt="">
+                    <img src="assets/about/interns/shweta_anantharaya.jpeg" class="member_photo" alt="">
                     <p class="member_name">Shweta Anantharaya</p>
                     <p class="member_role">(Intern)</p>
                     <!-- <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p> -->
@@ -106,7 +106,7 @@
                 </div>
                 <!-- team card -->
                 <div class="team_card">
-                    <img src="/assets/about/interns/suvarn_wadekar.jpeg" class="member_photo" alt="">
+                    <img src="assets/about/interns/suvarn_wadekar.jpeg" class="member_photo" alt="">
                     <p class="member_name">Suvarn Wadekar</p>
                     <p class="member_role">(Intern)</p>
                     <!-- <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p> -->
