--- a/about.html
+++ b/about.html
@@ -47,11 +47,21 @@
         <div class="about_main_text_wrap">
             <div class="about_main">
                 <p class="about_main_head">About ENAD</p>
-                <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, quo? Minus libero ut ipsa id facere excepturi voluptates fugiat quidem, hic reprehenderit a veniam, ab velit in aspernatur recusandae inventore.</p>
+                <p class="about_text">
+                    EN Architecture and Designs is a collaborative association of Architects and Designers that focuses on integrating intellect into the design.
+                </p>
+                <p class="about_text">
+                    We are a versatile architectural firm which provides all sorts of architectural solutions for a wide range of projects of various scales.
+                </p>
             </div>
             <div class="about_main">
-                <p class="about_main_head">Our Team</p>
-                <p class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem illum repellat dolor. Doloremque at neque minima voluptatibus mollitia consequatur ex praesentium, ab velit in aspernatur recusandae inventore.</p>
+                <p class="about_main_head">Our Design Philosophy</p>
+                <p class="about_text">
+                    We, at EN+AD not only focus on user sensitive designs but also integrate comprehensive construction technology to get satisfactory end results.
+                </p>
+                <p class="about_text">
+                    Aesthetics, Innovation and Sustainability are the key components of our designs. However, we make sure that our spaces do not compromise on functionality and responsiveness.
+                </p>
             </div>
         </div>
         <!-- core members -->
@@ -63,7 +73,7 @@
                     <img src="assets/about/saurabh_barde.jpg" class="member_photo" alt="">
                     <p class="member_name">Ar. Saurabh Barde</p>
                     <p class="member_role">(Founder & Principle Architect)</p>
-                    <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p>
+                    <p class="member_enad"><span class="enad_time">16</span><br>years at<br> ENAD</p>
                     <!-- <p class="member_exp">5 years experience</p> -->
                 </div>
                 <!-- team card -->
@@ -71,7 +81,7 @@
                     <img src="assets/about/raj_shah.jpeg" class="member_photo" alt="">
                     <p class="member_name">Ar. Raj Shah </p>
                     <p class="member_role">(Architect)</p>
-                    <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p>
+                    <p class="member_enad"><span class="enad_time">10</span><br>years at<br> ENAD</p>
                     <!-- <p class="member_exp">5 years experience</p> -->
                 </div>
                 <!-- team card -->
@@ -79,7 +89,7 @@
                     <img src="assets/about/atharva_nene.jpeg" class="member_photo" alt="">
                     <p class="member_name">Ar. Atharva Nene</p>
                     <p class="member_role">(Architect)</p>
-                    <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p>
+                    <p class="member_enad"><span class="enad_time">04</span><br>years at<br> ENAD</p>
                     <!-- <p class="member_exp">5 years experience</p> -->
                 </div>
                 <!-- team card -->
@@ -87,7 +97,7 @@
                     <img src="assets/about/heli_patel.jpg" class="member_photo" alt="">
                     <p class="member_name">Int Des. Heli Patel </p>
                     <p class="member_role">(Interior Designer)</p>
-                    <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p>
+                    <p class="member_enad"><span class="enad_time">04</span><br>years at<br> ENAD</p>
                     <!-- <p class="member_exp">5 years experience</p> -->
                 </div>
             </div>
@@ -125,18 +135,18 @@
                 </div>
                 <!-- associate -->
                 <div class="associate">
-                    <p class="associate_name">Ar. Kartiki Arondekar</p>
-                    <p class="associate_role">(Hospitality Specialist)</p>
+                    <p class="associate_name">Omkar Barde</p>
+                    <p class="associate_role">(PMC)</p>
                 </div>
                 <!-- associate -->
                 <div class="associate">
-                    <p class="associate_name">Ar. Kartiki Arondekar</p>
-                    <p class="associate_role">(Hospitality Specialist)</p>
+                    <p class="associate_name">Jitesh Patel</p>
+                    <p class="associate_role">(Structural Engineer)</p>
                 </div>
                 <!-- associate -->
                 <div class="associate">
-                    <p class="associate_name">Ar. Kartiki Arondekar</p>
-                    <p class="associate_role">(Hospitality Specialist)</p>
+                    <p class="associate_name">Ar. Anuradha Rathod</p>
+                    <p class="associate_role">(Liasoning Architect)</p>
                 </div>
             </div>
         </div>
